--- a/app/src/main/res/layout/weather_items.xml
+++ b/app/src/main/res/layout/weather_items.xml
@@ -22,7 +22,8 @@
         android:layout_marginBottom="12dp"
         style="@style/TextAppearance.MaterialComponents.Subtitle1"
         app:layout_constraintTop_toBottomOf="@+id/location"
-        app:layout_constraintStart_toStartOf="@+id/location" />
+        app:layout_constraintStart_toStartOf="@+id/location"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
     <TextView
