--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#64B5F6</color>
     <color name="dark_blue">#2962FF</color>
+    <color name="grey">#424242</color>
 </resources>
